--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -31,3 +31,35 @@ jobs:
 	- name: test launch
 	  working-directory: ${{github.workspace}}/build
 	  run: ./test_multiplication
+
+	- name: install Singularity
+	# Ensure repositories are up-to-date
+	sudo apt-get update
+	# Install debian packages for dependencies
+	sudo apt-get install -y \
+   		autoconf \
+   		automake \
+   		cryptsetup \
+   		fuse \
+   		fuse2fs \
+   		git \
+   		libfuse-dev \
+   		libglib2.0-dev \
+   		libseccomp-dev \
+   		libtool \
+   		pkg-config \
+   		runc \
+   		squashfs-tools \
+   		squashfs-tools-ng \
+   		uidmap \
+   		wget \
+   		zlib1g-dev
+
+	wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb
+	sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb
+
+	- name: Build Singularity
+	  run: sudo singularity build matr.sif Singularity.def
+
+	- name: Install sshpass
+	 run: sudo apt-get update && sudo apt-get install -y sshpass
