--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -11,7 +11,7 @@ jobs:
 
 	steps: 
 	- name: Checkout
-	- uses: actions/checkout@v2
+		 uses: actions/checkout@v2
 	with:
 		submodules: true
 
@@ -34,26 +34,27 @@ jobs:
 
 	- name: install Singularity
 	# Ensure repositories are up-to-date
-	sudo apt-get update
+	- run: |
+			sudo apt-get update
 	# Install debian packages for dependencies
-	sudo apt-get install -y \
-   		autoconf \
-   		automake \
-   		cryptsetup \
-   		fuse \
-   		fuse2fs \
-   		git \
-   		libfuse-dev \
-   		libglib2.0-dev \
-   		libseccomp-dev \
-   		libtool \
-   		pkg-config \
-   		runc \
-   		squashfs-tools \
-   		squashfs-tools-ng \
-   		uidmap \
-   		wget \
-   		zlib1g-dev
+			sudo apt-get install -y \
+   			autoconf \
+   			automake \
+   			cryptsetup \
+   			fuse \
+   			fuse2fs \
+   			git \
+   			libfuse-dev \
+   			libglib2.0-dev \
+   			libseccomp-dev \
+   			libtool \
+   			pkg-config \
+   			runc \
+   			squashfs-tools \
+   			squashfs-tools-ng \
+   			uidmap \
+   			wget \
+   			zlib1g-dev
 
 	wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb
 	sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb
@@ -62,7 +63,7 @@ jobs:
 	  run: sudo singularity build matr.sif Singularity.def
 
 	- name: Install sshpass
-	 run: sudo apt-get update && sudo apt-get install -y sshpass
+		run: sudo apt-get update && sudo apt-get install -y sshpass
 
 	- name: Transfer stuff via SCP
 		run: |
