--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -1,73 +1,59 @@
 name: soft_eng
 
-on:
-	push:
-		branches: [main]
+on: [push, pull_request]
 
 jobs:
-	build:
-		runs-on: ubuntu-latest
+  build:	
+     runs-on: ubuntu-latest
 
-	steps: 
-	- name: Checkout
-		uses: actions/checkout@v2
-	with:
-		submodules: true
+     steps:
+       - name: Checkout
+         uses: actions/checkout@v2
+         with:
+            submodules: true
+       - name: MPI installation
+         run: sudo apt-get install -y libopenmpi-dev
 
-	- name: MPI installation
-	  run: sudo apt-get install -y libopenmpi-dev
-
-	- name: CMAKE installation
-	  run: jwlawson/actions-setup-cmake@v1
-	
-	- name: Build creation
-	  run: |
-		mkdir build
-		cd build
-		cmake ..
-		cmake --build .
-
-	- name: test launch
-	  working-directory: ${{github.workspace}}/build
-	  run: ./test_multiplication
-
-	- name: install Singularity
-	# Ensure repositories are up-to-date
-	- run: |
-			sudo apt-get update
-	# Install debian packages for dependencies
-			sudo apt-get install -y \
-   			autoconf \
-   			automake \
-   			cryptsetup \
-   			fuse \
-   			fuse2fs \
-   			git \
-   			libfuse-dev \
-   			libglib2.0-dev \
-   			libseccomp-dev \
-   			libtool \
-   			pkg-config \
-   			runc \
-   			squashfs-tools \
-   			squashfs-tools-ng \
-   			uidmap \
-   			wget \
-   			zlib1g-dev
-
-	wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb
-	sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb
-
-	- name: Build Singularity
-	  run: sudo singularity build matr.sif Singularity.def
-
-	- name: Install sshpass
-		run: sudo apt-get update && sudo apt-get install -y sshpass
-
-	- name: Transfer stuff via SCP
-		run: |
-			sshpass -p "${{secrets.SSH_PRIVATE_KEY}}" scp -o StrictHostKeyChecking=no matr.sif monitor.py matrixA.txt matrixB.txt
-	- name: Run job via SSH
-		run: |
-			ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
-			sshpass -p "${{ secrets.SSH_PRIVATE_KEY }}" ssh -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it
+       - name: CMAKE installation
+         run: jwlawson/actions-setup-cmake@v1
+       - name: Build creation
+         run: mkdir build && cd build && cmake .. && cmake --build .
+       - name: test launch
+         working-directory: ${{github.workspace}}/build
+         run: ./test_multiplication
+       - name: install Singularity
+         run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+          autoconf \
+          automake \
+          cryptsetup \
+          fuse \
+          fuse2fs \
+          git \
+          libfuse-dev \
+          libglib2.0-dev \
+          libseccomp-dev \
+          libtool \
+          pkg-config \
+          runc \
+          squashfs-tools \
+          squashfs-tools-ng \
+          uidmap \
+          wget \
+          zlib1g-dev
+       - name: Install singularity
+         run:
+          wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb
+          sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.debù
+       - name: Build Singularity
+         run: sudo singularity build matr.sif Singularity.def
+       - name: Install sshpass
+         run: sudo apt-get update && sudo apt-get install -y sshpass
+       - name: Transfer stuff via SCP
+         run: |
+          sshpass -p "${{secrets.SSH_PRIVATE_KEY}}" scp -o StrictHostKeyChecking=no matr.sif monitor.py matrixA.txt matrixB.txt
+       - name: Run job via SSH
+         run: |
+          ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
+          sshpass -p "${{ secrets.SSH_PRIVATE_KEY }}" ssh -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it
