--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -16,9 +16,11 @@ jobs:
 
        - name: CMAKE installation
          run: jwlawson/actions-setup-cmake@v1
-       - name: Build creation
-         run: mkdir build && cd build && cmake .. && cmake --build .
-       - name: test launch
+       - name: Configure CMAKE
+         run: cmake -S . -B build
+       - name: Build
+         run: cmake --build build
+       - name: RunTest
          working-directory: ${{github.workspace}}/build
          run: ./test_multiplication
        - name: install Singularity
