--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -23,7 +23,7 @@ jobs:
        - name: RunTest
          working-directory: ${{github.workspace}}/build
          run: ./test_multiplication
-       - name: install Singularity
+       - name: Install dependencies
          run: |
           sudo apt-get update
           sudo apt-get install -y \
