--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -54,3 +54,6 @@ jobs:
        - name: Transfer stuff via SCP
          run: |
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no matr.sif job.sh a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57
+       - name: Run job
+         run: |
+          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" ssh -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it 'cd /g100/home/usertrain/a08trb57/ && sbatch job.sh'
