--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -48,7 +48,7 @@ jobs:
          run:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb && sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb 
        - name: Build Singularity
-         run: sudo singularity build matr.sif Singularity.def
+         run: sudo singularity build --fakeroot matr.sif Singularity.def
        - name: Install sshpass
          run: sudo apt-get update && sudo apt-get install -y sshpass
        - name: Transfer stuff via SCP
