--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -17,9 +17,6 @@ jobs:
        - name: CMAKE installation
          uses: jwlawson/actions-setup-cmake@v1
 
-       - name: Set up Singularity
-         uses: eWaterCycle/setup-singularity@v7
-
        - name: Configure CMAKE
          run: cmake -S . -B build
        - name: Build
@@ -52,7 +49,7 @@ jobs:
          run:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb && sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb 
        - name: Build Singularity
-         run: singularity build --fakeroot matr.sif Singularity.def
+         run: sudo singularity build matr.sif Singularity.def
        - name: Install sshpass
          run: sudo apt-get update && sudo apt-get install -y sshpass
        - name: Transfer stuff via SCP
