--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -50,8 +50,10 @@ jobs:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb && sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb 
        - name: Build Singularity
          run: sudo singularity build matr.sif Singularity.def
+         
        - name: Install sshpass
          run: sudo apt-get update && sudo apt-get install -y sshpass
+
        - name: Transfer stuff via SCP
          run: |
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no matr.sif job.sh a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57
@@ -60,11 +62,12 @@ jobs:
           ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" ssh -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it 'cd /g100/home/usertrain/a08trb57/ && sbatch job.sh'
 
-       - name: Create txt files
+
+       - name: Transfer files from cluster
          run: |
-          mkdir -p artifacts
-          echo > artifacts/output.txt
-          echo > artifacts/error.txt
+          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/output.txt ${{github.workspace}}/artifacts/
+          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/error.txt ${{github.workspace}}/artifacts/
+  
 
        - name: Upload artifact
          uses: actions/upload-artifact@v2
