--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -50,7 +50,7 @@ jobs:
           wget https://github.com/sylabs/singularity/releases/download/v4.1.3/singularity-ce_4.1.3-jammy_amd64.deb && sudo dpkg -i singularity-ce_4.1.3-jammy_amd64.deb 
        - name: Build Singularity
          run: sudo singularity build matr.sif Singularity.def
-         
+
        - name: Install sshpass
          run: sudo apt-get update && sudo apt-get install -y sshpass
 
@@ -65,6 +65,7 @@ jobs:
 
        - name: Transfer files from cluster
          run: |
+          ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/output.txt ${{github.workspace}}/artifacts/
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/error.txt ${{github.workspace}}/artifacts/
   
