--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -74,4 +74,4 @@ jobs:
          uses: actions/upload-artifact@v2
          with:
           name: txt-files
-          path: artifacts/*.txt
+          path: ./*.txt
