--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -66,10 +66,10 @@ jobs:
        - name: Transfer files from cluster
          run: |
           ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
-          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/output.txt ./
+          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/output.txt ~
           ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
-          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/error.txt ./
-
+          sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/error.txt ~
+          
        - name: Upload artifact
          uses: actions/upload-artifact@v2
          with:
