--- a/.github/workflows/soft_eng.yml
+++ b/.github/workflows/soft_eng.yml
@@ -69,9 +69,6 @@ jobs:
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/output.txt ~
           ssh-keygen -f "/home/runner/.ssh/known_hosts" -R "login.g100.cineca.it"
           sshpass -p "${{secrets.CLUSTER_PASSCODE}}" scp -o StrictHostKeyChecking=no a08trb57@login.g100.cineca.it:/g100/home/usertrain/a08trb57/error.txt ~
-          
-       - name: Upload artifact
-         uses: actions/upload-artifact@v2
-         with:
-          name: txt-files
-          path: ./*.txt
+          cd
+          cat output.txt
+      
